--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             margin-top: 20px;
             color: green;
         }
+        .gif {
+            align-items: center;
+            width: 100%;
+            margin-top: 5rem;
+        }
     </style>
 </head>
 <body>
@@ -62,6 +67,8 @@
     <h3>How Long You've Been Doing Nothing</h3>
     <p id="counter">0 seconds</p>
     <p id="record">Personal Record: 0.000 seconds</p>
+
+    <img class="gif" src="BURN_BAR.gif" alt="burn baby burn">
 
     <!-- Hidden cat overlay -->
     <div id="cat-overlay"></div>
