--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
             margin-top: 20px;
             color: green;
         }
-        .gif {
-            align-items: center;
-            width: 100%;
-            margin-top: 5rem;
-        }
+        .gif2 {
+    transform: rotate(180deg);
+}
     </style>
 </head>
 <body>
@@ -64,11 +62,14 @@
     <!-- Bouncing DVD Logo -->
     <div id="dvd-logo"></div>
 
+    <img class="gif2" src="BURN_BAR.gif" alt="burn baby burn">
+
     <h3>How Long You've Been Doing Nothing</h3>
     <p id="counter">0 seconds</p>
     <p id="record">Personal Record: 0.000 seconds</p>
 
-    <img class="gif" src="BURN_BAR.gif" alt="burn baby burn">
+    <img class="gif3" src="BURN_BAR.gif" alt="burn baby burn">
+
 
     <!-- Hidden cat overlay -->
     <div id="cat-overlay"></div>
