--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
         }
         .gif2 {
     transform: rotate(180deg);
+    z-index: 0;
+    display: flex;
+    justify-content: center; /* Centers content horizontally */
+    align-items: center;     /* Centers content vertically */
+    margin: 0 auto;          /* Centers the flex container itself if it's a block element */
 }
+
     </style>
 </head>
 <body>
