--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             height: 200px;
             background-size: contain;
             background-repeat: no-repeat;
+            animation: rotate3D 5s infinite linear; /* Apply the animation */
         }
         #cat-overlay {
             position: fixed;
@@ -48,14 +49,6 @@
             margin-top: 20px;
             color: green;
         }
-        .gif2 {
-    transform: rotate(180deg);
-    z-index: 0;
-    display: flex;
-    justify-content: center; /* Centers content horizontally */
-    align-items: center;     /* Centers content vertically */
-    margin: 0 auto;          /* Centers the flex container itself if it's a block element */
-}
 
     </style>
 </head>
