--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
             margin-bottom: 20%;
         }
         #dvd-logo {
-            position: absolute;
-            width: 400px;
-            height: 200px;
-            background-size: contain;
-            background-repeat: no-repeat;
-            animation: rotate3D 5s infinite linear; /* Apply the animation */
-        }
+    position: absolute;
+    width: 800px;
+    height: 200px;
+    background-size: 100% 100%; /* Stretch the background to fill the element */
+    background-repeat: no-repeat;
+    animation: rotate3D 5s infinite linear; /* Apply the animation */
+}
+
         #cat-overlay {
             position: fixed;
             top: 0;
