icon and other stuff ig

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I have no idea what im doing</title>
+    <link rel="icon" href="icon.jpg" type="image/icontype">
     <style>
         body, html {
             margin: 0;
@@ -221,9 +222,5 @@
         // Start the first random flash
         randomFlashInterval();
     </script>
-
-<script>
-    
-</script>
 </body>
 </html>
